--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 
   margin: 0px;
-  background-color: rgb(235, 219, 219);
+  background-color: rgb(241, 226, 226);
 }
 ul {
   list-style-type: none;
@@ -9,7 +9,7 @@ ul {
 .class1 {
   text-align: center;
   color: rgb(61, 14, 105);
-  font-size: 55px;
+  font-size: 65px;
 }
 .textcolor {
   color: rgb(228, 177, 177);
@@ -20,18 +20,21 @@ ul {
   height: auto;
 }
 #logo {
-  margin-bottom: 30px;
+  margin: auto;
+  width:fit-content ;
+  padding: 10px;
+  border-radius: 10px
   display: block;
-  margin-left: 460px;
-  width: 50%;
+  
 }
 #text {
   background-color: blueviolet;
   color: white;
   margin: auto;
-  width: 50%;
+  width: 60%;
   padding: 10px;
   border-radius: 10px;
+  font-size: 24px;
 }
 #footer {
   margin: 2rem;
