--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
 ul {
   list-style-type: none;
 }
+li{
+  text-indent:5px ;
+
+
+}
+
 .class1 {
   text-align: center;
   color: rgb(61, 14, 105);
@@ -13,7 +19,7 @@ ul {
 }
 .textcolor {
   color: rgb(228, 177, 177);
-  list-style-type:circle;
+ 
 }
 #contanier {
   width: 100%;
@@ -59,3 +65,6 @@ ul {
   border-radius: 7px;
   background-color: rgb(243, 212, 212);
 }
+.satirbasi{
+  border-left: 5px solid orange;
+  }
